# ylq-graphic-learning

./: .gitignore
pa0/: CMakeLists.txt  main.cpp
pa0/doc/: pa0.md
pa1/: CMakeLists.txt  Triangle.cpp  main.cpp  rasterizer.cpp  rasterizer.hpp
pa1/doc/: Lecture 04.md  Mpersp.excalidraw  pa1.md
pa2/: CMakeLists.txt  Triangle.cpp  main.cpp  rasterizer.cpp  rasterizer.hpp
pa2/doc/: pa2.excalidraw
pa3/: CMakeLists.txt  OBJ_Loader.h  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
